# edit-incremental-parser

./: .gitignore  CITATION.cff  LICENSE  README.md
incremental-pratt-gen/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
incremental-pratt-gen/grammars/: assoc_stress.toml  c_expr.toml  calc.toml  stmt_lang.toml
reference-impl/: Cargo.toml  README.md
reference-impl/src/: ast.rs  bench_support.rs  chain_wb.rs  edit.rs  incremental.rs  lexer.rs  lib.rs  op.rs  parser.rs  pratt_core.rs  recovery.rs  roslyn_style.rs  semantics.rs  semantics_ctx.rs  span_lookahead.rs
reference-impl/tests/: equivalence.proptest-regressions  equivalence.rs  recovery_incremental.rs  recovery_theorem.proptest-regressions  recovery_theorem.rs  semantics.rs  semantics_ctx.rs  stress.rs  wagner_fig10.rs
verification/: Cargo.toml  README.md  why3find.json
verification/src/: harnesses.rs  incremental.rs  lexer.rs  lib.rs  parser.rs  recovery.rs
